# linka-ota-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build_and_test.yml  build_test.yml  deploy.yml
linka_ota_server/: __init__.py  firmware.py  headers.py
ota_server/: Dockerfile  requirements.txt  wsgi-service.py
ota_server/app/: __init__.py  firmware.py  service.py
ota_server/tests/: conftest.py
static/: index.html
tests/: conftest.py  test_factory.py  test_ota_server.py
